# sd-prompt-manager

./: .gitignore  API_DOCUMENTATION.md  BATCH_SCRIPT_README.md  COMPLETE_PROJECT_REPORT.md  COMPREHENSIVE_TECHNICAL_REPORT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OPTIMIZATION_COMPLETE_REPORT.md  PROMPTS_LIBRARY_COMPREHENSIVE_GUIDE.md  QUICK_START_GUIDE.md  README.md  action_backup.json  action_seductive.json  batch_action_generator.py  mainidea.md  prompt_manager_app.py  pyproject.toml  requirements.txt  split_action_by_characters.py  test.md  test_functionality.py
data/: README.md
data/database/: prompts_database.json
data/processed/analysis_reports/: VOCABULARY_MANAGEMENT_REPORT.md
data/processed/split_by_characters/: action_couple.json  action_futanari.json  action_group.json  action_multiple_boys.json  action_multiple_girls.json  action_solo_boy.json  action_solo_girl.json  action_unknown.json  (+2 more)
docs/: CIVITAI_ARTICLE.md  DEVELOPMENT.md  README.md  USER_GUIDE.md
docs/reports/: PROJECT_OPTIMIZATION_COMPLETE_REPORT.md  PROJECT_OPTIMIZATION_SUMMARY.md  PROJECT_REORGANIZATION_AND_OPTIMIZATION_COMPLETE_REPORT.md  PROJECT_REORGANIZATION_REPORT.md  README.md
prompts/level_1_visual/: prompts_visual_impact.json
prompts/level_3_explicit/: prompts_explicit.json  prompts_futanari.json  prompts_general.json
src/: __init__.py
src/batch_submit/: README.md  __init__.py
src/data_analysis/: __init__.py  split_action_by_characters.py
src/prompt_manager/: __init__.py  data_manager.py  gui.py
tests/: test_functionality.py
(+16 files in other folders)
